--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "autoprefixer": "latest",
     "next": "10.0.4",
     "postcss": "latest",
+    "preact": "^10.5.12",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "tailwindcss": "latest"
