--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
     "start": "next start"
   },
   "dependencies": {
-    "autoprefixer": "latest",
-    "next": "10.0.4",
-    "postcss": "latest",
-    "preact": "^10.5.12",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "tailwindcss": "latest"
+    "autoprefixer": "^10.2.5",
+    "next": "10.1.1",
+    "postcss": "^8.2.8",
+    "preact": "^10.5.13",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "tailwindcss": "^2.0.4"
   }
 }
