--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "@tailwindcss/jit": "^0.1.18",
     "autoprefixer": "^10.2.5",
-    "next": "10.1.1",
-    "postcss": "^8.2.8",
+    "next": "10.1.2",
+    "postcss": "^8.2.9",
     "preact": "^10.5.13",
     "react": "17.0.2",
     "react-dom": "17.0.2",
