--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.0.0",
+    "@heroicons/react": "^1.0.1",
     "autoprefixer": "^10.2.5",
     "next": "10.1.3",
     "postcss": "^8.2.10",
