--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@heroicons/react": "^1.0.1",
     "@tailwindcss/typography": "^0.4.0",
     "autoprefixer": "^10.2.5",
+    "keen-slider": "^5.4.0",
     "next": "10.1.3",
     "postcss": "^8.2.10",
     "preact": "^10.5.13",
