--- a/package.json
+++ b/package.json
@@ -8,16 +8,17 @@
     "start": "next start"
   },
   "dependencies": {
-    "@headlessui/react": "^1.0.0",
-    "@heroicons/react": "^1.0.1",
-    "@tailwindcss/typography": "^0.4.0",
-    "autoprefixer": "^10.2.5",
-    "keen-slider": "^5.4.0",
-    "next": "10.1.3",
-    "postcss": "^8.2.10",
-    "preact": "^10.5.13",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "tailwindcss": "^2.1.1"
+    "@headlessui/react": "^1.4.0",
+    "@heroicons/react": "^1.0.3",
+    "@tailwindcss/forms": "^0.3.3",
+    "@tailwindcss/typography": "^0.4.1",
+    "autoprefixer": "^10.3.1",
+    "keen-slider": "^5.5.1",
+    "next": "latest",
+    "postcss": "^8.3.6",
+    "preact": "^10.5.14",
+    "react": "latest",
+    "react-dom": "latest",
+    "tailwindcss": "^2.2.7"
   }
 }
