--- a/package.json
+++ b/package.json
@@ -10,15 +10,17 @@
   "dependencies": {
     "@headlessui/react": "^1.5.0",
     "@heroicons/react": "^1.0.6",
-    "@tailwindcss/forms": "^0.3.4",
-    "@tailwindcss/typography": "^0.4.1",
-    "autoprefixer": "^10.4.4",
     "keen-slider": "^6.6.9",
     "next": "^12.1.5",
-    "postcss": "^8.4.12",
     "preact": "^10.7.1",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "tailwindcss": "^2.2.19"
+    "react-dom": "^18.0.0"
+  },
+  "devDependencies": {
+    "@tailwindcss/forms": "^0.5.0",
+    "@tailwindcss/typography": "^0.5.2",
+    "autoprefixer": "^10.4.4",
+    "postcss": "^8.4.12",
+    "tailwindcss": "^3.0.24"
   }
 }
